--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^3.22.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "mysql2": "^2.1.0",
     "sequelize": "^5.21.12",
     "winston": "^3.2.1"
   },
@@ -31,6 +32,7 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.3",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "sequelize-cli": "^5.5.1"
   }
 }
