--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,22 @@
-NODE_PORT=<port>
+NODE_PORT=port
+
+# Dev variables
+DB_DEV_USER=user
+DB_DEV_PASSWORD=password
+DB_DEV_HOST=127.0.0.1
+DB_DEV_PORT=3306
+DB_DEV_DATABASE=db_name
+
+# Test variables
+DB_TEST_USER=user
+DB_TEST_PASSWORD=password
+DB_TEST_HOST=127.0.0.1
+DB_TEST_PORT=3306
+DB_TEST_DATABASE=db_name
+
+# Prod variables
+DB_PROD_USER=user
+DB_PROD_PASSWORD=password
+DB_PROD_HOST=127.0.0.1
+DB_PROD_PORT=3306
+DB_PROD_DATABASE=db_name
