--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "lint": "eslint --fix . && echo 'Lint complete.'"
+    "lint": "npx standard --fix . && echo 'Lint complete.'"
   },
   "author": "Rohit Ambre",
   "license": "ISC",
@@ -26,13 +26,8 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-prettier": "^3.1.3",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "standard": "^14.3.4"
   }
 }
